terraform/main.tf
# main.tf - The Logic for our Infrastructure

provider "aws" {
  region = var.aws_region
}

# 1. Security Group
resource "aws_security_group" "nova_sg" {
  name        = "nova-commerce-sg"
  description = "Allow SSH and Web traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 2. EC2 Instance
resource "aws_instance" "nova_server" {
  ami           = var.ubuntu_ami
  instance_type = var.instance_type
  key_name      = var.key_name

  vpc_security_group_ids = [aws_security_group.nova_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              apt-get update
              apt-get install -y docker.io docker-compose
              systemctl start docker
              usermod -aG docker ubuntu
              EOF

  tags = {
    Name = "Nova-Commerce-Server"
  }
}

# 3. Security Group for Database
# Only allows the EC2 server to talk to the database on port 5432.
resource "aws_security_group" "db_sg" {
  name        = "nova-db-sg"
  description = "Allow PostgreSQL traffic from EC2"

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.nova_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 4. RDS Instance - The "Database"
resource "aws_db_instance" "nova_db" {
  identifier           = "nova-commerce-db"
  allocated_storage    = 20
  engine               = "postgres"
  engine_version       = "16"
  instance_class       = "db.t3.micro" # Free Tier!
  db_name              = var.db_name
  username             = var.db_username
  password             = var.db_password
  parameter_group_name = "default.postgres16"
  skip_final_snapshot  = true
  publicly_accessible  = true # Set to false in production for better security
  vpc_security_group_ids = [aws_security_group.db_sg.id]

  tags = {
    Name = "Nova-Commerce-DB"
  }
}

# 5. Outputs
output "server_ip" {
  value = aws_instance.nova_server.public_ip
}

output "db_endpoint" {
  description = "The connection endpoint for the RDS instance"
  value       = aws_db_instance.nova_db.endpoint
}
